--- a/package.json
+++ b/package.json
@@ -1,27 +1,11 @@
 {
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
-    "fs": "^0.0.1-security",
-    "node-addon-api": "^6.1.0",
-    "parcel": "^2.12.0",
-    "request": "^2.88.2"
+    "parcel": "^2.12.0"
   },
   "type": "module",
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
-    "assert": "^2.1.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^5.7.1",
-    "crypto-browserify": "^3.12.0",
-    "events": "^3.3.0",
-    "https-browserify": "^1.0.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "punycode": "^1.4.1",
-    "querystring-es3": "^0.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.3",
-    "util": "^0.12.5"
+    "process": "^0.11.10"
   }
 }
