--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
+    "m3u8-parser": "^7.1.0",
     "parcel": "^2.12.0"
   },
   "type": "module",
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "buffer": "^5.5.0||^6.0.0",
     "process": "^0.11.10"
   }
 }
